# ai-auth-kit

./: .gitignore  LICENSE  README.md  agent-skill-release.json  bunfig.toml  install.sh  install.sh.template  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
docs/: agent-skill-release-checklist.md  canonical-contract-0.2.0.md  dependency-policy.md  documentation-qa.md  installer-manager-trust.md  npm-release-checklist.md
docs-site/: .gitignore  DESIGN.md  README.md  astro.config.ts  biome.json  package.json  tsconfig.json  tsconfig.scripts.json
examples/: basic.ts
installer-manager/: Cargo.toml  Dockerfile  public-key.toml  test-public-key.toml
installer-manager/src/: activation.rs  bundle.rs  directory.rs  fault.rs  fs.rs  main.rs  release.rs  root.rs  state.rs  trust.rs
scripts/: audit-dependencies.ts  build-cli.ts  build-installer-manager.ts  build-installer.ts  catalog-provenance.ts  check-loc.ts  dependency-policy.ts  disposable-install.ts  docs-policy.ts  generate-catalog-snapshot.ts  git-dependency.ts  install-agent-skill.sh  npm-preflight.sh  pack-agent-skill.ts  pack-verify.ts  qa-contract-red.ts  qa-docs-negative.ts  qa-git-consumer.ts  qa-installer-manager-races.ts  qa-installer-negative.ts  qa-library-host.ts  qa-minimum-release-age.ts  qa-release-matrix.ts  qa-stale-package.ts  release-artifacts.ts  release-build.ts  release-bundle.ts  release-verify.ts  sign-release-bundle.ts  verify-dist.ts  verify-release-artifact.sh
src/: account-oauth-browser.ts  account-oauth-github.ts  account-oauth-openai.ts  account-oauth-shared.ts  (+54 more)
(+101 files in other folders)
